<resources>
    <string name="app_name">GameBacklog</string>
    <string name="action_settings">Settings</string>

    <string name="release_date">Release: %s</string>

    <string name="title_activity_add">AddActivity</string>
    <string name="title">Title</string>
    <string name="platform">Platform</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
</resources>
